CallMD/src/objects/Surgeries__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Surgeries</relationshipLabel>
        <relationshipName>Surgeries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Surgeries</label>
    <nameField>
        <label>Surgeries Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surgeries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>